--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <properties>
         <!--properties for release build with gitflow-plugin-->
         <github.host>github.com</github.host>
-        <maven.settings.file>${settings.localRepository}</maven.settings.file>
+        <maven.settings.hook/>
         <performRelease>false</performRelease>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -178,7 +178,7 @@
                     <postReleaseGoals>deploy</postReleaseGoals>
                     <postHotfixGoals>deploy</postHotfixGoals>
                     <!--load maven settings.xml for sub-processes of maven-->
-                    <argLine>-DperformRelease=${performRelease} -s ${maven.settings.file}</argLine>
+                    <argLine>-DperformRelease=${performRelease} ${maven.settings.hook}</argLine>
                     <gitFlowConfig>
                         <!-- default git flow prefixes -->
                         <productionBranch>master</productionBranch>
@@ -321,7 +321,7 @@
             <id>jenkins</id>
             <properties>
                 <github.host>sakuli-ui.github.com</github.host>
-                <maven.settings.file>${user.home}/mvn_settings/sakuli-settings.xml</maven.settings.file>
+                <maven.settings.hook>-s ${user.home}/mvn_settings/sakuli-settings.xml</maven.settings.hook>
                 <performRelease>true</performRelease>
             </properties>
         </profile>
