--- a/sakuli-ui-client/pom.xml
+++ b/sakuli-ui-client/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>sakuli-ui</artifactId>
     <groupId>org.sweetest.sakuli</groupId>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.10.0-75-add-beta-info-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
