--- a/sakuli-ui-client/src/main/resources/package.json
+++ b/sakuli-ui-client/src/main/resources/package.json
@@ -37,7 +37,8 @@
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "immutability-helper": "2.6.5",
-    "moment": "2.18.1",
+    "lodash": "4.17.5",
+    "moment": "2.19.3",
     "nothrow": "1.0.1",
     "path": "0.12.7",
     "reflect-metadata": "0.1.10",
