--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.sweetest.sakuli</groupId>
     <artifactId>sakuli-ui</artifactId>
     <packaging>pom</packaging>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.10.0-77-did-SNAPSHOT</version>
     <name>sakuli-ui</name>
 
     <modules>
